# ops-agent

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  init-db.sh  main.py  pyproject.toml
.github/workflows/: e2e_test.yml
alembic/: env.py
alembic/versions/: 29480ee4c2a7_add_weather_model.py  35a0a9f8796d_add_coordinates_to_tenants.py  47846fca5b52_add_email_outbox.py  4ca47e2d7e29_initial_schema.py  4e245e2f500c_add_catalog_bom_mapping_gap_tables_and_.py  622a9909e654_add_categories_to_inventory_items.py  776791bde4e7_add_supplier_tables_and_seed_data.py  9d9a095d8f95_add_address_to_tenant_for_search.py  adc58e50c8a3_add_owner_counts_models.py  d4922f03d029_split_adjustment_transaction_type.py  dc6f317d1d5c_baseline_existing_schema.py
db/: schema.sql
db/migrations/: 2026117_001_unique_events.sql
scripts/: publish_test.py  seed.py  synthetic_generator.py
src/: clock.py  config.py  logging.py
src/adapters/: base.py
src/cli/: __init__.py  __main__.py  context.py  count.py  login.py  shrinkage.py
src/consumers/: bom_consumer.py  stock_updater.py  utils.py  weather_consumer.py
src/db/: models.py  seed.py  seed_test_item.py  session.py  tenant.py  tenant_service.py
src/events/: bus.py
src/producers/: cron_scheduler.py  inventory.py
src/schemas/: email.py  event.py  inventory.py  sale.py  suppliers.py  template.py  tenant.py
src/services/: config_services.py  shrinkage_service.py  template_services.py  tenant_service.py  weather_service.py
tests/: conftest.py
tests/e2e/: test_pipeline.py  test_weather.py
(+13 files in other folders)
