[project]
name = "ops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]
