[project]
name = "ops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
